<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Statistics">


    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/main_color">

        <Button
            android:id="@+id/statBackButt"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:text="@string/cancel_button"
            android:textAllCaps="false"
            android:textColor="@color/whiteText"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/stats_screen_title"
            android:textColor="@color/whiteText"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/statFullNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topBar"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/content_placeholder"
        android:textColor="@color/darkText"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/statUsernameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/statFullNameTxt"
        android:layout_alignStart="@+id/statFullNameTxt"
        android:text="@string/content_placeholder"
        android:textColor="@color/grayText" />

    <TextView
        android:id="@+id/statStreamTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/statUsernameTxt"
        android:layout_alignStart="@+id/statUsernameTxt"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:maxLines="3"
        android:text="@string/content_placeholder"
        android:textColor="@color/darkText"
        android:textSize="12sp" />

    <View
        android:id="@+id/statLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/statStreamTxt"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/lightBg"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/statLine"
        android:layout_alignStart="@+id/statStreamTxt"
        android:text="@string/stats_views_title"
        android:textColor="@color/darkText"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView21"
        android:layout_alignStart="@+id/textView21"
        android:text="@string/stats_view_description"
        android:textColor="@color/grayText"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/statViewsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/statLine"
        android:layout_alignEnd="@+id/statStreamTxt"
        android:text="@string/stats_default_value"
        android:textColor="@color/darkText"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView22"
        android:layout_alignStart="@+id/textView22"
        android:layout_marginTop="20dp"
        android:text="@string/stats_likes_title"
        android:textColor="@color/darkText"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView24"
        android:layout_alignStart="@+id/textView21"
        android:text="@string/stats_likes_description"
        android:textColor="@color/grayText"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/statLikesTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView24"
        android:layout_alignEnd="@+id/statStreamTxt"
        android:text="@string/stats_default_value"
        android:textColor="@color/darkText"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView23"
        android:layout_alignStart="@+id/textView23"
        android:layout_marginTop="20dp"
        android:text="@string/stats_profile_clicks_title"
        android:textColor="@color/darkText"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView25"
        android:layout_alignStart="@+id/textView25"
        android:text="@string/stats_profile_clicks_description"
        android:textColor="@color/grayText"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/statClicksTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView25"
        android:layout_alignEnd="@+id/statLikesTxt"
        android:text="@string/stats_default_value"
        android:textColor="@color/darkText"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView26"
        android:layout_alignStart="@+id/textView26"
        android:layout_marginTop="20dp"
        android:text="@string/stats_comments_title"
        android:textColor="@color/darkText"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView28"
        android:layout_alignStart="@+id/textView28"
        android:text="@string/stats_comments_description"
        android:textColor="@color/grayText"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/statCommentsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/statClicksTxt"
        android:layout_alignTop="@+id/textView28"
        android:text="@string/stats_default_value"
        android:textColor="@color/darkText"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView29"
        android:layout_alignStart="@+id/textView29"
        android:layout_marginTop="20dp"
        android:text="@string/stats_shares_title"
        android:textColor="@color/darkText"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView31"
        android:layout_alignStart="@+id/textView31"
        android:text="@string/stats_shares_description"
        android:textColor="@color/grayText"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/statSharesTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView31"
        android:layout_alignEnd="@+id/statCommentsTxt"
        android:text="@string/stats_default_value"
        android:textColor="@color/darkText"
        android:textSize="18sp" />
</RelativeLayout>
