<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".EditProfile">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/main_color">

        <Button
            android:id="@+id/epCancelButt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:text="@string/cancel_button"
            android:textAllCaps="false"
            android:textColor="@color/whiteText"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/edit_profile_screen_title"
            android:textAlignment="center"
            android:textColor="@color/whiteText"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topBar"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/epAvatarImg"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/default_avatar" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/epAvatarImg"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="2dp"
                    android:text="@string/edit_profile_tap_to_change_avatar"
                    android:textAlignment="center"
                    android:textColor="@color/grayText"
                    android:textSize="9sp" />

                <ImageView
                    android:id="@+id/epCoverImg"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_below="@+id/textView11"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:background="@color/main_color"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/epCoverImg"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/edit_profile_tap_to_change_cover_image"
                    android:textColor="@color/grayText"
                    android:textSize="9sp" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView12"
                    android:layout_alignStart="@+id/epCoverImg"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/edit_profile_username_title"
                    android:textAlignment="center"
                    android:textColor="@color/darkText"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/epUsernameTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView13"
                    android:layout_alignStart="@+id/textView13"
                    android:layout_alignEnd="@+id/textView13"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/main_color"
                    android:ems="10"
                    android:hint="@string/edit_profile_username_hint"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/epUsernameTxt"
                    android:layout_alignStart="@+id/epCoverImg"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/edit_profile_full_name_title"
                    android:textAlignment="center"
                    android:textColor="@color/darkText"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/epFullnameTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView14"
                    android:layout_alignStart="@+id/textView13"
                    android:layout_alignEnd="@+id/textView13"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/main_color"
                    android:ems="10"
                    android:hint="@string/edit_profile_full_name_hint"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/epFullnameTxt"
                    android:layout_alignStart="@+id/epCoverImg"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/edit_profile_email_title"
                    android:textAlignment="center"
                    android:textColor="@color/darkText"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/epEmailTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView15"
                    android:layout_alignStart="@+id/textView13"
                    android:layout_alignEnd="@+id/textView13"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/main_color"
                    android:ems="10"
                    android:hint="@string/edit_profile_email_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/epEmailTxt"
                    android:layout_alignStart="@+id/epCoverImg"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/edit_profile_about_you_title"
                    android:textAlignment="center"
                    android:textColor="@color/darkText"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/epAboutMeTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView16"
                    android:layout_alignStart="@+id/textView13"
                    android:layout_alignEnd="@+id/textView13"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/main_color"
                    android:ems="10"
                    android:hint="@string/edit_profile_about_you_hint"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/epUpdateProfileButt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/epAboutMeTxt"
                    android:layout_alignParentEnd="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="30dp"
                    android:backgroundTint="@color/main_color"
                    android:text="@string/edit_profile_update_button"
                    android:textAllCaps="false"
                    android:textColor="@color/whiteText"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
